ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dealan-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service-svc
            port:
              number: 8081
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service-svc
            port:
              number: 8082
      - path: /drivers
        pathType: Prefix
        backend:
          service:
            name: driver-service-svc
            port:
              number: 8083
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: order-service
            port:
              number: 8089
      - path: /matching
        pathType: Prefix
        backend:
          service:
            name: matching-service
            port:
              number: 8091
      - path: /pricing
        pathType: Prefix
        backend:
          service:
            name: pricing-service
            port:
              number: 80
      - path: /shipments
        pathType: Prefix
        backend:
          service:
            name: shipment-service
            port:
              number: 80
      - path: /locations
        pathType: Prefix
        backend:
          service:
            name: location-service
            port:
              number: 8090
      - path: /map-routes
        pathType: Prefix
        backend:
          service:
            name: map-route-service
            port:
              number: 8088
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 80
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 8084
      - path: /ratings
        pathType: Prefix
        backend:
          service:
            name: rating-review-service
            port:
              number: 8085
      - path: /punishments
        pathType: Prefix
        backend:
          service:
            name: punishment-service
            port:
              number: 8086
      - path: /promos
        pathType: Prefix
        backend:
          service:
            name: promo-service
            port:
              number: 8080
      - path: /chats
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port:
              number: 8087
